--- a/docs6/mkdocs.yml
+++ b/docs6/mkdocs.yml
@@ -90,3 +90,4 @@ nav:
       - "Installation": "installation.md"
       - "Building from source": "build.md"
     - "Documents for previous releases": "release-docs.md"
+    - "Glossary": "glossary.md"
